Добавляет получение администратором истории аренды пользователя
